--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   scoped_model: ^1.0.1 # serve para fazer alterações em varios locais do aplicativo
   path_provider: ^0.4.1 # obter caminho de algum local
   url_launcher: ^4.0.2 #lancar telefone com numero da loja ou lancar o maps
+  http: ^0.12.0
 
   flutter_launcher_icons: ^0.7.0
 
